fix: post list for user
