# docs/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 servers:
-  - url: //192.168.100.250:8010/v1
+  - url: http://127.0.0.1:8010/v1
     description: Default server
 info:
   description: ""
@@ -65,6 +65,12 @@ paths:
           required: false
           schema:
             type: string
+        - name: type
+          in: query
+          description: -1 DAO, all(All but DAO), 0 SMS 1 VIDEO ;Multiple commas can be used to separate
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: successful operation
@@ -72,6 +78,43 @@ paths:
           description: Invalid ID supplied
       security:
         - api_key: []
+
+  /dao:
+    get:
+      tags:
+        - DAO
+      summary: Get a DAO
+      parameters:
+        - name: dao_id
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        '405':
+          description: Invalid input
+      security:
+        - api_key: [ ]
+    put:
+      tags:
+        - DAO
+      summary: update DAO
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                price:
+                  type: integer
+                  default: 10
+      responses:
+        '405':
+          description: Invalid input
+      security:
+        - api_key: [ ]
 
   /auth/login:
     post:
@@ -101,6 +144,8 @@ paths:
           description: successful operation
         '400':
           description: Invalid Order
+      security:
+        - api_key: []
 
   /user/info:
     get:
@@ -111,13 +156,14 @@ paths:
         - name: user_address
           in: query
           description: The user address for login
-          required: true
+          required: false
           schema:
             type: string
       responses:
         default:
           description: successful operation
-
+      security:
+        - api_key: []
 components:
   schemas:
     ApiResponse:
